# llm-wiki-builder

./: .cursorrules  .gitignore  API_SPEC.md  DATA_MODEL.md  DESIGN.md  PLAN.md  PROMPT_DESIGN.md  README.md  REQUIREMENTS.md  SECURITY.md  TECH_DECISIONS.md  architecture.html  package.json  tailwind.config.js  ui-mockup.html  vite.config.ts
backend/: requirements.txt
backend/app/: crud.py  database.py  llm_client.py  main.py  models.py  schemas.py
backend/scripts/: seed.py
backend/tests/: test_api.py  test_models.py
scripts/: generate_queries.py  generate_queries_batch.py  index_files.py  index_test.py  inject_mock.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: project.rs  query.rs
src-tauri/src/db/: mod.rs  repo.rs  schema.rs
src-tauri/src/indexer/: mod.rs  raw_indexer.rs
src-tauri/src/llm/: client.rs  prompts.rs
src-tauri/src/models/: answer.rs  mod.rs  project.rs  query.rs
src/components/: ProjectForm.tsx  QueryCard.tsx  QueryInbox.tsx  SearchView.tsx  Sidebar.tsx  WikiView.tsx
src/hooks/: useProjects.ts  useQueries.ts  useSearch.ts
src/lib/: api.ts  markdown.test.ts  markdown.ts
src/stores/: appStore.ts
src/types/: index.ts
